# RT_Jog_Controller

./: README.md
.github/workflows/: build.yml
CAM_OUTPUTS/BOM/: I2C_Jog_Controller_CAM_OUTPUT_A4.xlsx  I2C_Jog_Controller_CAM_OUTPUT_A5.xlsx  I2C_Jog_Controller_CAM_OUTPUT_A6.xlsx
CAM_OUTPUTS/Pick Place/: I2C_Jog_Controller_CAM_OUTPUT_A4.csv  I2C_Jog_Controller_CAM_OUTPUT_A5.csv  I2C_Jog_Controller_CAM_OUTPUT_A6.csv
FW/: platformio.ini
FW/i2c_responder/: .gitignore  Adafruit_NeoPixel.h  CMakeLists.txt  app_main.cpp  i2c_jogger.h  ss_oled.cpp
Jog2K Deluxe Edition/: README.md
Jog2K Deluxe Edition/Buttons/Black/: 4mm Button Short x2.stl  4mm Button x2.stl  Flood Button Cover.stl  Fn Button Cover.stl  Halt Button Cover.stl  Hold Button Cover.stl  Home Button Cover.stl  Minus Button Cover x2.stl  Mist Button Cover.stl  Plus Button Cover x2.stl  Raise Button Cover x2.stl  Reset Button Cover x2.stl  Spindle Button Cover.stl  Start Button Cover.stl
Jog2K Deluxe Edition/Buttons/Translucent/: Halt Button Lightpipe.stl  Hold Button Lightpipe.stl  Home Button Lightpipe.stl  Raise Button Lightpipe x2.stl  Spindle Button Lightpipe.stl  Start Button Lightpipe.stl
Jog2K Deluxe Edition/Enclosure/: Bottom Enclosure 1.3inch.stl  Bottom Enclosure.stl  Buttom Enclosure - No Micro USB.stl  Buttom Enclosure - No Type C.stl  Display Retainer 1.3inch.stl  Top Cover 1.3inch.stl  Top Cover.stl  Window.stl
Jog2K Deluxe Edition/Enclosure 1.3in Screen/: Bottom Enclosure.stl  ScreenSpacer.stl  Screenclip.stl  Top Cover 1.3in Display.stl
Jog2K Deluxe Edition/FDM Buttons/: Jog2k Deluxe with FDM Buttons.f3d  Jog2k Deluxe with FDM Buttons.step  MicroUSBFiller.stl
Jog2K Deluxe Edition/Src/: Bottom Enclosure_slim.STEP  Jog2k Deluxe Edition.step  Top Cover 1.3_slim.STEP
Mech/: 10mm_button.SLDPRT  10mm_button_x16.STL  4mm_button.SLDPRT  4mm_button.STL  6mm_button.SLDPRT  README.md  TopCover.SLDPRT  TopCover.STL  Window.SLDPRT  dpad.SLDPRT  jog_bottom_box.SLDPRT  jog_bottom_box.STL  jog_bottom_box_slim.SLDPRT  jog_bottom_box_slim.STL  jog_box.SLDASM  lightpipe.SLDPRT  lightpipe_x3.STL
PCBA/: I2C_Jog_Controller.OutJob  I2C_Jog_Controller.PrjPCB  I2C_Jog_Controller.PrjPCBStructure
PCBA/Schematic/: Change Log.SchDoc  I2C_Jog_Controller.SchDoc  I2C_Keypad.SchDoc  I2C_Keypad_host_module.SchDoc  PushButtonBlack.SchDoc  PushButtondirection.SchDoc  RP2040_MCU.SchDoc  Title Sheet.SchDoc  Top Level.SchDoc
(+33 files in other folders)
